# aratinga-seo

./: LICENSE  README.md  pyproject.toml
aratinga_seo/: __init__.py  apps.py  aratinga_hooks.py  blocks.py  models.py
src/aratinga_seo/: apps.py  settings.py
