# -- PACKAGE --------------------------

[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Voreios", email = "fabio@voreios.com.br"}
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = [
    "aratinga==0.0.1a.dev",
]
description = "Wagtail + Voreios Extensions enabling rapid development of brasilian public educational-focused websites."
dynamic = ["version"]
license = {file = "LICENSE.txt"}
name = "aratinga-seo"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Source = "https://github.com/voreios/aratinga-seo"

[tool.setuptools]
packages = ["aratinga_seo"]

[tool.setuptools.dynamic]
version = {attr = "aratinga_seo.__version__"}