[project]
name = "aratinga-seo"
dynamic = ["version"]
description = "Wagtail + Voreios Extensions enabling rapid development of brasilian public educational-focused websites."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "Voreios", email = "fabio@voreios.com.br"}
]
dependencies = [
    "aratinga==0.1.0a0.dev0",

]

[project.urls]
Source = "https://github.com/voreios/aratinga-seo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "./src/aratinga_seo/__about__.py"